# Scraping-DynamicWebsites

./: .gitignore  README.md  pyproject.toml  run.py
jobs/: base_job.py  jobcz.py  nofluffjobs.py
scraper/: scraper.py
