[tool.poetry]
name = "parsing-dynamicwebsites"
version = "0.1.0"
description = ""
authors = ["Eldar Gazizov <kursus1010@gmail.com>>"]
readme = "README.md"
packages = [{include = "parsing_dynamicwebsites"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
